Rename: signin 컴포넌트 이름 login으로 변경

--- a/src/stylesheets/Follow.css
+++ b/src/stylesheets/Follow.css
@@ -1,167 +1,118 @@
 @charset "UTF-8";
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff") format("woff");
   font-weight: 100;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraBold.woff") format("woff");
   font-weight: 800;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Hahmlet';
+  font-family: "Hahmlet";
   src: local(※), url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/Hahmlet-ExtraBold.woff2") format("woff2");
   unicode-range: U+0041-005A, U+0061-007A;
   font-weight: 800;
 }
-
 .follow-follow-list-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
   padding-top: 0px;
 }
-
 .follow-follow-list-wrap .follow-list-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   margin: 0 0 0 0;
   padding: 0;
   font-size: 14px;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 300;
 }
-
 .follow-follow-list-wrap .follow-list-box .setting-settings-list-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
+  flex-flow: column nowrap;
   padding: 0px 0px 0px 0px;
   margin: 0 auto;
   width: 100%;
   font-size: 14px;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 300;
 }
-
 .follow-follow-list-wrap .follow-list-box .setting-list-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
   margin: 0px 0 0 0;
   padding: 0px 0px;
   width: 100%;
   font-size: 14px;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 600;
 }
-
 .follow-follow-list-wrap .follow-list-box .setting-list-box .setting-list-text {
   font-size: 16px;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 600;
 }
-
 .follow-follow-list-wrap .follow-list-box .setting-list-box .setting-list-text p {
   font-size: 14px;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 600;
   margin-left: 14px;
   color: #1c1c1c;
 }
-
 .follow-follow-list-wrap .follow-list-box .follow-list-name {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   line-height: 0;
   font-size: 14px;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 600;
   color: #1c1c1c;
 }
-
 .follow-follow-list-wrap .follow-list-box .follow-list-name .follow-list-name-name {
   display: block;
   white-space: nowrap;
@@ -169,7 +120,6 @@
   font-weight: 600;
   margin-bottom: 6px;
 }
-
 .follow-follow-list-wrap .follow-list-box .follow-list-name .follow-list-name-icon-wrap {
   display: block;
   white-space: nowrap;
@@ -177,67 +127,41 @@
   font-weight: 300;
   margin-bottom: 6px;
 }
-
 .follow-follow-list-wrap .follow-list-box .follow-list-name .follow-list-name-icon-wrap .follow-list-name-icon {
   font-size: 1.5em;
   color: lightgray;
 }
-
 .follow-follow-list-wrap .follow-list-box .follows-list-box {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-flow: row nowrap;
+  align-items: center;
 }
-
 .follow-follow-list-wrap .follow-list-box .follows-list-box .follow-list-button {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  align-items: center;
+  justify-content: flex-start;
   line-height: 0;
   margin-bottom: 0px;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
+  flex-flow: row nowrap;
   color: #1c1c1c;
 }
-
 .follow-follow-list-wrap .follow-list-box .follows-list-box .follow-list-button .follow-list-plus-icon-wrap {
   width: 10px;
   height: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .follow-follow-list-wrap .follow-list-box .follows-list-box .follow-list-button .follow-list-plus-icon-wrap .follow-list-plus-icon {
   font-size: 1.55em;
   color: #FF873D;
 }
-
 .follow-follow-list-wrap .follow-list-box .follows-list-box .follow-list-button .follow-list-text {
   display: block;
   font-size: 14px;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 300;
   margin-left: 2px;
   color: gray;
@@ -245,22 +169,14 @@
 }
 
 .null-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
+  flex-flow: column nowrap;
   padding: 20% 0px 0px 0px;
   margin: 0 auto;
   width: 30%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   font-size: 15px;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 200;
-  color: #858383;
-}
-/*# sourceMappingURL=Follow.css.map */
+  color: rgb(133, 131, 131);
+}/*# sourceMappingURL=Follow.css.map */
