--- a/src/stylesheets/CalendarBox.css
+++ b/src/stylesheets/CalendarBox.css
@@ -1,69 +1,60 @@
 @charset "UTF-8";
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff") format("woff");
   font-weight: 100;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraBold.woff") format("woff");
   font-weight: 800;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Hahmlet';
+  font-family: "Hahmlet";
   src: local(※), url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/Hahmlet-ExtraBold.woff2") format("woff2");
   unicode-range: U+0041-005A, U+0061-007A;
   font-weight: 800;
 }
-
 body {
-  font-family: 'Pretendard','Egyptian Slate Pro';
+  font-family: "Pretendard", "Egyptian Slate Pro";
 }
 
 .yearMM {
@@ -77,9 +68,8 @@ body {
 .MuiPickersStaticWrapper-staticWrapperRoot {
   width: 100%;
   min-width: none !important;
-  background-color: #00000000 !important;
+  background-color: rgba(0, 0, 0, 0) !important;
 }
-
 .MuiPickersStaticWrapper-staticWrapperRoot .MuiPickersToolbar-toolbar {
   display: none;
 }
@@ -88,84 +78,52 @@ body {
   width: 310px;
   min-height: 0 !important;
 }
-
 .MuiPickersBasePicker-pickerView .MuiPickersCalendarHeader-daysHeader {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
-
 .MuiPickersBasePicker-pickerView .MuiPickersCalendarHeader-daysHeader span {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 400;
   font-size: 12px;
 }
-
 .MuiPickersBasePicker-pickerView .MuiPickersCalendar-week {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   margin-bottom: 5px;
 }
-
 .MuiPickersBasePicker-pickerView .MuiPickersCalendarHeader-transitionContainer p {
   text-align: left;
   padding-left: 26px;
-  font-family: 'Pretendard','Egyptian Slate Pro';
+  font-family: "Pretendard", "Egyptian Slate Pro";
 }
-
 .MuiPickersBasePicker-pickerView .MuiPickersCalendarHeader-iconButton {
-  background-color: #00000000;
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
+  background-color: rgba(0, 0, 0, 0);
+  order: 2;
   margin: 0 -5px;
 }
-
 .MuiPickersBasePicker-pickerView .MuiTypography-body1 {
   display: block;
 }
-
 .MuiPickersBasePicker-pickerView .MuiPickersCalendar-transitionContainer {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   min-height: 500px !important;
 }
-
 .MuiPickersBasePicker-pickerView .MuiIconButton-root {
   border-radius: 0;
 }
-
 .MuiPickersBasePicker-pickerView .MuiPickersDay-daySelected {
-  background-color: #00000000;
+  background-color: rgba(0, 0, 0, 0);
 }
-
 .MuiPickersBasePicker-pickerView .dateTile_wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 }
-
 .MuiPickersBasePicker-pickerView .MuiPaper-root {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-flow: column nowrap;
+  align-items: center;
 }
-
 .MuiPickersBasePicker-pickerView .todoDataNum {
   position: relative;
   font-size: 0.6em;
@@ -173,5 +131,4 @@ body {
   text-align: center;
   color: #fff;
   top: -55%;
-}
-/*# sourceMappingURL=CalendarBox.css.map */
+}/*# sourceMappingURL=CalendarBox.css.map */
