--- a/src/stylesheets/More.css
+++ b/src/stylesheets/More.css
@@ -1,67 +1,58 @@
 @charset "UTF-8";
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff") format("woff");
   font-weight: 100;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraBold.woff") format("woff");
   font-weight: 800;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
 }
-
 @font-face {
-  font-family: 'Hahmlet';
+  font-family: "Hahmlet";
   src: local(※), url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/Hahmlet-ExtraBold.woff2") format("woff2");
   unicode-range: U+0041-005A, U+0061-007A;
   font-weight: 800;
 }
-
 .text-form {
   margin: 0 auto;
   width: 100%;
@@ -80,28 +71,24 @@
   margin: 0 auto;
   width: 100%;
 }
-
 .announce-wrap .announce-text {
   padding: 0 50px 0 50px;
   margin-top: 10px;
   margin-bottom: 1px;
   /* background: ivory; */
   font-size: 16px;
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 300;
   font-size: 15px;
   color: #1c1c1c;
 }
-
 .announce-wrap .announce-date {
-  font-family: 'Pretendard';
+  font-family: "Pretendard";
   font-weight: 300;
   font-size: 13px;
   color: #afafaf;
   margin-bottom: 15px;
 }
-
 .announce-wrap .announce-divider {
   margin-bottom: 20px;
-}
-/*# sourceMappingURL=More.css.map */
+}/*# sourceMappingURL=More.css.map */
